# rao

./: .gitignore  Cargo.toml  LICENSE  README.md
pyexample/: simulator.py
src/: core.rs  geometry.rs  lib.rs  linalg.rs  main.rs  utils.rs
tests/: buildimat.rs
